Avancée page exercice

--- a/academie_francaise/src/css/Exercice.css
+++ b/academie_francaise/src/css/Exercice.css
@@ -23,3 +23,9 @@
 .Exercice .intitule {
   margin-top: 3em;
 }
+
+.Exercice .aide {
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+}
