--- a/academie_francaise/src/css/Exercice.css
+++ b/academie_francaise/src/css/Exercice.css
@@ -1,16 +1,21 @@
+.Exercice {
+  min-height: 60vh;
+}
+
 .Exercice .TagList {
   display: flex;
   justify-content: center;
 }
 
-.Exercice .TagList .col_1, .Exercice .TagList .col_2 {
+.Exercice .TagList .col_1,
+.Exercice .TagList .col_2 {
   width: 30%;
   gap: 1em;
   display: flex;
 }
 
 .Exercice .TagList .col_2 {
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .Exercice .pagination {
@@ -24,8 +29,42 @@
   margin-top: 3em;
 }
 
-.Exercice .aide {
+.Exercice .col_container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.Exercice .col_1,
+.Exercice .col_2,
+.Exercice .col3 {
+  flex-basis: 30%;
+}
+
+.Exercice .tagCliquable {
+  margin: 2em;
   display: flex;
   justify-content: center;
-  cursor: pointer;
+}
+
+.Exercice .Navigation {
+  gap: 1em;
+}
+
+.Exercice .Recap {
+  display: flex;
+  flex-direction: column;
+  min-height: 40vh;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.Exercice .Mascotte {
+  content: url("../ressources/Images/renart.png");
+  max-width: 100%;
+  max-height: 45vh;
+}
+
+.Exercice .Mascotte:hover {
+  content: url("../ressources/Images/renart_bouche.png");
 }
