modif exercice type phrases à trou : non fonctionnel

--- a/academie_francaise/src/css/TrouQuestion.css
+++ b/academie_francaise/src/css/TrouQuestion.css
@@ -1,40 +1,9 @@
-.TrouQuestion ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .TrouQuestion li {
-    cursor: pointer;
-    border: 2px solid #2B5877;
-    border-radius: 10px;
-    width: fit-content;
-    padding: 0.5em 1.3em;
-    margin-top: 0.7em;
-    transition: border 0.15s ease;
-  }
-  
-  .TrouQuestion li:hover {
-    border: 2px solid #F27E19;
-  }
-  
-  .TrouQuestion ul li.correct {
-    cursor: default;
-    border: 2px solid #5CA03B;
-  }
-  
-  .TrouQuestion ul li.incorrect {
-    cursor: default;
-    border: 2px solid #BD0000;
-  }
-
-  .TrouQuestion div.correct {
+  .TrouQuestion p.correct {
     color: #5CA03B;
     font-weight: bold;
   }
 
-  .TrouQuestion div.incorrect {
+  .TrouQuestion p.incorrect {
     color: #BD0000;
   }
 
@@ -48,7 +17,7 @@
     font-style: italic;
   }
 
-.user-input {
+.TrouQuestion input.user-input {
   font-family: inherit;
   width: 100%;
   border: 0;
@@ -61,6 +30,27 @@
   background: transparent;
   transition: border-color 0.2s;
   max-width: 25%;
+  margin-bottom: 1em;
 }
-  
-  
+
+.TrouQuestion button {
+  cursor: pointer;
+  border: 2px solid #2B5877;
+  border-radius: 10px;
+  width: fit-content;
+  padding: 0.5em 1.3em;
+  transition: border 0.15s ease;
+  margin-top: 1em;
+}
+
+.TrouQuestion button:hover {
+  border: 2px solid #F27E19;
+}
+
+.TrouQuestion div.ennonce {
+  margin-top: 1em;
+}
+
+.TrouQuestion {
+  margin-top: 1em;
+}
