--- a/academie_francaise/src/css/QcmQuestion.css
+++ b/academie_francaise/src/css/QcmQuestion.css
@@ -1,3 +1,11 @@
+.QcmQuestion {
+  margin-top: 2em;
+}
+
+.QcmQuestion h3 {
+  margin-bottom: 1em;
+}
+
 .QcmQuestion ul {
   display: flex;
   flex-direction: column;
