--- a/academie_francaise/src/css/BlocChoix.css
+++ b/academie_francaise/src/css/BlocChoix.css
@@ -1,5 +1,6 @@
 .BlocChoix {
   border: 2px solid #2B5877;
+  background-color: #ffffff; 
   border-radius: 10px;
   width: 300px;
   min-height: 300px;
