--- a/academie_francaise/src/css/ConteneurTag.css
+++ b/academie_francaise/src/css/ConteneurTag.css
@@ -1,5 +1,5 @@
 .ConteneurTag {
-  background-color: #f3f3f3;
+  background-color: #ffffff; 
   border-radius: 10px;
   border: 2px solid #2B5877;
 }
