--- a/academie_francaise/src/css/ExercicePrecis.css
+++ b/academie_francaise/src/css/ExercicePrecis.css
@@ -1,57 +1,57 @@
-.Exercice {
+.ExercicePrecis {
   min-height: 60vh;
 }
 
-.Exercice .TagList {
+.ExercicePrecis .TagList {
   display: flex;
   justify-content: center;
 }
 
-.Exercice .TagList .col_1,
-.Exercice .TagList .col_2 {
+.ExercicePrecis .TagList .col_1,
+.ExercicePrecis .TagList .col_2 {
   width: 30%;
   gap: 1em;
   display: flex;
 }
 
-.Exercice .TagList .col_2 {
+.ExercicePrecis .TagList .col_2 {
   justify-content: flex-end;
 }
 
-.Exercice .pagination {
+.ExercicePrecis .pagination {
   display: flex;
   justify-content: center;
   margin: 3em;
   gap: 0.7em;
 }
 
-.Exercice .intitule {
+.ExercicePrecis .intitule {
   margin-top: 3em;
   font-weight: bold;
 }
 
-.Exercice .col_container {
+.ExercicePrecis .col_container {
   display: flex;
   justify-content: space-between;
 }
 
-.Exercice .col_1,
-.Exercice .col_2,
-.Exercice .col3 {
+.ExercicePrecis .col_1,
+.ExercicePrecis .col_2,
+.ExercicePrecis .col3 {
   flex-basis: 30%;
 }
 
-.Exercice .tagCliquable {
+.ExercicePrecis .tagCliquable {
   margin: 2em;
   display: flex;
   justify-content: center;
 }
 
-.Exercice .Navigation {
+.ExercicePrecis .Navigation {
   gap: 1em;
 }
 
-.Exercice .Recap {
+.ExercicePrecis .Recap {
   display: flex;
   flex-direction: column;
   min-height: 40vh;
@@ -60,16 +60,16 @@
   justify-content: center;
 }
 
-.Exercice .Mascotte::before {
+.ExercicePrecis .Mascotte::before {
   content: url("../ressources/Images/renart_bouche.png");
 }
 
-.Exercice .Mascotte {
+.ExercicePrecis .Mascotte {
   content: url("../ressources/Images/renart_bouche_fermee_queue_droite.png");
   max-width: 100%;
   max-height: 45vh;
 }
 
-.Exercice .Mascotte:hover {
+.ExercicePrecis .Mascotte:hover {
   content: url("../ressources/Images/renart_bouche.png");
 }
