correction 'ennonce' en 'enonce'

--- a/academie_francaise/src/css/SubstitutionQuestion.css
+++ b/academie_francaise/src/css/SubstitutionQuestion.css
@@ -79,7 +79,7 @@
     border: 2px solid #F27E19;
 }
 
-.SubstitutionQuestion div.ennonce {
+.SubstitutionQuestion div.enonce {
     margin-top: 1em;
 }
 
