--- a/academie_francaise/src/css/TrouQuestion.css
+++ b/academie_francaise/src/css/TrouQuestion.css
@@ -55,7 +55,7 @@
     border: 2px solid #F27E19;
   }
 
-  .TrouQuestion .span.ennonce:hover {
+  .TrouQuestion .span.enonce:hover {
     color: #F27E19;
   }
 
