--- a/academie_francaise/src/css/Footer.css
+++ b/academie_francaise/src/css/Footer.css
@@ -2,7 +2,8 @@
   position: relative;
   bottom: 0;
   margin-top: auto;
-  display: flex;
+  display: flex; /* Ajout de cette ligne */
+  justify-content: flex-end; /* Aligner le contenu à droite */
   font-family: "Baskerville";
   background-color: #2B5877;
   color: white;
@@ -35,4 +36,16 @@
 
 .Footer .col-1 ul {
   padding: 1em 0;
+}
+
+.Footer .logo {
+  cursor: pointer;
+  margin-left: auto;
+}
+
+
+.Footer .logo img {
+  max-width: 40%;
+  margin-bottom: 1em;
+  filter: invert(100%);
 }
