--- a/academie_francaise/src/css/App.css
+++ b/academie_francaise/src/css/App.css
@@ -16,8 +16,13 @@ ul, li {
   list-style: none;
 }
 
-h1, h2,h3, h4{
-  font-family: Avenir, Galvji;
+h1, h2,h3, h4 {
+  font-family: "Klee_one";
+}
+
+h1 {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
 }
 
 a {
@@ -26,7 +31,11 @@ a {
   outline: none;
 }
 
-p, h3 {
+p, h1, h2,h3, h4 {
   margin-block-end: 0;
   margin-block-start: 0;
+  margin-block-end: 0;
+  margin-block-start: 0;
+  margin-inline-end: 0;
+  margin-inline-start: 0;
 }
