--- a/academie_francaise/src/css/Content.css
+++ b/academie_francaise/src/css/Content.css
@@ -4,7 +4,7 @@
   justify-content: center; 
   text-align: center;
   flex-direction: column;
-  background-color: #f3f3f3;
+  background-color: #fff9f4;
   font-family: Georgia, Times;
   min-height: 100vh;
 }
