--- a/academie_francaise/src/css/Content.css
+++ b/academie_francaise/src/css/Content.css
@@ -1,21 +1,26 @@
 .Content {
   display: flex;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   text-align: center;
   flex-direction: column;
-  background-color: #fff9f4;
   font-family: Georgia, Times;
   min-height: 100vh;
+  background: url('../ressources/Images/BG_feuilles.png'), rgb(248, 251, 255); 
+  background-size: 50%;
+  background-repeat: repeat;
 }
 
 .Content .Page {
   border-radius: 10px;
-  background-color: #ffffff;
+  background-color: #ffffff !important;
   min-width: 80%;
   max-width: 80%;
   min-height: 80vh;
   margin: 1em;
-  padding-top: 1em;
+  padding: 1em;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  background: url('../ressources/Images/feuille.png') right top/150px auto no-repeat;
 }
+
+/* rgb(248, 251, 255), rgb(245, 239, 233)*/
