--- a/academie_francaise/src/css/Footer.css
+++ b/academie_francaise/src/css/Footer.css
@@ -5,6 +5,7 @@
   display: flex; /* Ajout de cette ligne */
   justify-content: flex-end; /* Aligner le contenu à droite */
   font-family: "Baskerville";
+  font-size: 80%;
   background-color: #2B5877;
   color: white;
   width: 100%;
@@ -43,9 +44,8 @@
   margin-left: auto;
 }
 
-
 .Footer .logo img {
-  max-width: 40%;
+  max-width: 30%;
   margin-bottom: 1em;
   filter: invert(100%);
 }
