--- a/academie_francaise/src/css/App.css
+++ b/academie_francaise/src/css/App.css
@@ -1,6 +1,11 @@
 @font-face {
-  font-family: "Klee_one"; /* Nom de la police que vous souhaitez utiliser */
-  src: url("../ressources/font/Klee_One/KleeOne-SemiBold.ttf") format("truetype"); /* Chemin vers le fichier de police */
+  font-family: "Bodoni"; /* Nom de la police que vous souhaitez utiliser */
+  src: url("../ressources/font/Bodoni_Moda/static/BodoniModa_18pt-Medium.ttf") format("truetype"); /* Chemin vers le fichier de police */
+}
+
+@font-face {
+  font-family: "Amethysta"; /* Nom de la police que vous souhaitez utiliser */
+  src: url("../ressources/font/Amethysta/Amethysta-Regular.ttf") format("truetype"); /* Chemin vers le fichier de police */
 }
 
 body {
@@ -10,15 +15,20 @@ body {
   min-height: 100vh;
 }
 
+p {
+  font-family: 'Amethysta';
+}
+
+h1, h2,h3, h4 {
+  font-family: "Bodoni";
+}
+
 ul, li {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-h1, h2,h3, h4 {
-  font-family: "Klee_one";
-}
 
 h1 {
   padding-top: 0.5em;
