--- a/academie_francaise/src/css/ChoixNiveau.css
+++ b/academie_francaise/src/css/ChoixNiveau.css
@@ -1,26 +1,37 @@
-.ChoixNiveau .ColContainer{
+.ChoixNiveau .ColContainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .ChoixNiveau .Col1 {
-  width: 15%;
+  width: 25%;
   position: relative;
+  margin-bottom: -1em;
 }
 
 .ChoixNiveau .Mascotte {
-  content: url("../ressources/Images/renart_bouche.png");
+  content: url("../ressources/Images/renart4_epee.png");
   max-width: 100%;
   position: absolute;
   bottom: 0;
+}
+
+.ChoixNiveau .Col2 {
+  max-width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: justify;
 }
 
 .ChoixNiveau .Bulle h2 {
   margin-bottom: 0.7em;
 }
 
-.ChoixNiveau .Col2 {
+.ChoixNiveau .Bulle {
+  margin-bottom: 4px; /* Ajoute un espace de 10 pixels en bas du paragraphe */
+} 
+
+.ChoixNiveau .Col3 {
   max-width: 30%;
   display: flex;
   flex-direction: column;
@@ -41,5 +52,4 @@
 
 .ChoixNiveau .Col3 .Niveaux .Bouton {
   margin-bottom: 2em;
-}
-
+} 
