--- a/academie_francaise/src/css/EfQuestion.css
+++ b/academie_francaise/src/css/EfQuestion.css
@@ -1,52 +1,61 @@
 .EfQuestion .correct {
-    color: hsl(100, 46%, 43%);
-    font-weight: bold;
-    margin-top: 1em;
-  }
+  color: hsl(100, 46%, 43%);
+  font-weight: bold;
+  margin-top: 1em;
+}
 
-  .EfQuestion .incorrect {
-    color: #BD0000;
-    font-weight: bold;
-    margin-top: 1em;
-  }
+.EfQuestion .incorrect {
+  color: #BD0000;
+  font-weight: bold;
+  margin-top: 1em;
+}
 
-  .EfQuestion.inline-div {
-    display: inline;
-  }
+.EfQuestion.inline-div {
+  display: inline;
+}
 
-  .EfQuestion .correction {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    font-style: italic;
-  }
+.EfQuestion .correction {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  font-style: italic;
+}
 
-  .EfQuestion .validation {
-    display: flex;
-    justify-content: center;
-  }
+.EfQuestion .validation {
+  display: flex;
+  justify-content: center;
+}
 
-  .EfQuestion button {
-    margin-right: auto;
-    margin-left: auto;
-    display: flex;
-    cursor: pointer;
-    border: 2px solid #2B5877;
-    border-radius: 10px;
-    width: fit-content;
-    padding: 0.5em 1.3em;
-    transition: border 0.15s ease;
-    margin-top: 1em;
-  }
+.EfQuestion button {
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  cursor: pointer;
+  border: 2px solid #2B5877;
+  border-radius: 10px;
+  width: fit-content;
+  padding: 0.5em 1.3em;
+  transition: border 0.15s ease;
+  margin-top: 1em;
+  /* background-color: transparent; */
 
-  .EfQuestion .button:hover {
-    border: 2px solid #F27E19;
-  }
+}
 
-  .EfQuestion span.enonce:hover {
-    color: #F27E19;
-    cursor: pointer;
-  }
+.EfQuestion .button:hover {
+  border: 2px solid #F27E19;
+}
 
-  .EfQuestion {
-    margin-top: 1em;
-  }
+.EfQuestion span.enonce:hover {
+  color: #F27E19;
+  cursor: pointer;
+}
+
+.EfQuestion {
+  margin-top: 1em;
+}
+
+.EfQuestion .enonce {
+  margin-top: 1em;
+  border-radius: 10px;
+  background-color: #f9f8f8;
+  padding: 40px;
+}
