--- a/academie_francaise/src/css/ExercicePrecis.css
+++ b/academie_francaise/src/css/ExercicePrecis.css
@@ -60,71 +60,62 @@
   justify-content: center;
 }
 
+.ExercicePrecis .Recap .Bouton {
+  margin-bottom: 2em;
+}
+
 .ExercicePrecis .Mascotte::before {
   content: url("../ressources/Images/renart_bouche.png");
 }
 
 .ExercicePrecis .Mascotte {
   content: url("../ressources/Images/renart_bouche_fermee_queue_droite.png");
-  max-width: 18%;
-  max-height: 45vh;
   cursor: pointer;
   position: absolute;
-  bottom: 23%;
-  left: -2%;
+  bottom: 30px;
+  left: -40px;
+  max-height: 40%;
+  max-width: 300px;
 }
 
 .ExercicePrecis .Mascotte:hover {
   content: url("../ressources/Images/renart_bouche.png");
 }
 
-.ExercicePrecis .Explication {
-  max-width: 33vh; 
-  max-height: 35vh;
-  border-radius: 5px; 
-  background-color: #ffffff;
-  border: 1px solid #000000;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
-  text-align: justify; 
-  padding: 5px;
-  overflow: auto;
-  display: inline-block;
+.ExercicePrecis .Bulle::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
 }
 
-.ExercicePrecis .Explication .Lien {
-  text-align: center;
-  margin-top: 15px;
-  margin-bottom: 5px;
+.ExercicePrecis .Bulle::-webkit-scrollbar-thumb {
+  border: 5px solid #2B5877;
+  border-radius: 50px;
+  max-height: 20px;
 }
 
-.ExercicePrecis .Explication::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-
-.ExercicePrecis .Explication::-webkit-scrollbar-thumb {
-  background-color: #F27E19;
-  border-radius: 100px;
-  max-height: 30px;
-}
-
-.ExercicePrecis .Lien a {
+.ExercicePrecis .col_1 a {
   display: inline-block;
   padding: 5px 10px;
+  margin-top: 1em;
   border-radius: 5px;
   background-color: #F27E19;
   color: #FFFFFF;
-  text-decoration: none;
 }
 
-.ExercicePrecis .Lien a:hover {
+.ExercicePrecis .col_1 a:hover {
   background-color: #D1600E;
 }
 
-.ExercicePrecis .ExplicationEtLien {
-  position: absolute;
-  bottom: 60%;
-  left: 13%;
-  max-width: 20%; 
-  max-height: 15%; 
+.ExercicePrecis .col_1 .Bulle {
+  margin-top: 3em;
+  max-height: 200px;
+  overflow: auto;
+}
+
+.ExercicePrecis .col_1 .Bulle p {
+  text-align: justify;
+}
+
+.ExercicePrecis .Bulle::after {
+  display: none;
 }
