ajout css sur tous les types d'exos

--- a/academie_francaise/src/css/ReperageQuestion.css
+++ b/academie_francaise/src/css/ReperageQuestion.css
@@ -51,9 +51,11 @@
   margin-top: 1em;
 }
 
-.ReperageQuestion .enonce {
+.ReperageQuestion .lenonce {
   margin-top: 1em;
   border-radius: 10px;
   background-color: #f9f8f8;
   padding: 40px;
+  font-family: 'Amethysta';
+  font-size: 110%;
 }
