--- a/academie_francaise/src/css/TrouQuestion.css
+++ b/academie_francaise/src/css/TrouQuestion.css
@@ -16,6 +16,8 @@
     border-radius: 10px;
     background-color: #f9f8f8;
     padding: 40px;
+    font-family: 'Amethysta';
+    font-size: 110%;
   }
 
   .TrouQuestion.inline-div {
