--- a/academie_francaise/src/css/EfQuestion.css
+++ b/academie_francaise/src/css/EfQuestion.css
@@ -36,7 +36,7 @@
   padding: 0.5em 1.3em;
   transition: border 0.15s ease;
   margin-top: 1em;
-  /* background-color: transparent; */
+  background-color: transparent;
 
 }
 
@@ -53,9 +53,11 @@
   margin-top: 1em;
 }
 
-.EfQuestion .enonce {
+.EfQuestion .lenonce {
   margin-top: 1em;
   border-radius: 10px;
   background-color: #f9f8f8;
   padding: 40px;
+  font-family: 'Amethysta';
+  font-size: 110%;
 }
